[package]
name = "luma-prism"
version = "0.0.2"
edition = "2024"
description = "A fast PrismLauncher storage analyzer and safe cleanup CLI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tukuyomil032/luma-prism"
homepage = "https://github.com/tukuyomil032/luma-prism"
keywords = ["prismlauncher", "minecraft", "cli", "cleanup", "storage"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "luma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.12"
dirs = "6.0"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
trash = "5.2"
walkdir = "2.5"
